fixed blog padding on mobile

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -82,7 +82,7 @@
 
 //card
 .card {
-  @apply border-border border p-9 rounded;
+  @apply border-border border p-6 lg:p-9 rounded;
 }
 
 //tab
